test/setup.ts
// Jest setup file for additional configuration
import 'jest';

// Global test utilities and mocks can be added here
global.console = {
  ...console,
  // Uncomment to suppress console.log during tests
  // log: jest.fn(),
  // debug: jest.fn(),
  // info: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
};
